[tool.poetry]
name = "fetch-ai-agent-demo"
version = "0.1.0"
description = ""
authors = ["Lenin Kennedy <leninkennedy4work@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
uagents = "^0.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
